--- a/package.json
+++ b/package.json
@@ -18,5 +18,11 @@
   "bugs": {
     "url": "https://github.com/romanpitak/pfm/issues"
   },
-  "homepage": "https://github.com/romanpitak/pfm"
+  "homepage": "https://github.com/romanpitak/pfm",
+  "dependencies": {
+      "marked": "^0.3.3"
+  },
+  "devDependencies": {
+      "coffee-script": "^1.9.1"
+  }
 }
